@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 11.11.00
 
+              libnetpbm and 'ppmdraw' circle drawing functions: use floating
+              point arithmetic to make smoother circle.
+
               pamdice, pamundice: Add PBM fast path.
 
               pamdice: fix using more digits than necessary in output file
